     - Fixed an issue with command argument parsing so that it truly never
       returns a target without an engine specified, as documented.
     - Removed documentation for methods that don't exist.
     - Refactored config handling in tests to use a custom subclass of
       App::Sqitch::Config instead of various mocks, temporary files, and the
       like.
     [Options Unification]
     - Added the `--chdir`/`--cd`/`-C` option to specify a directory to change
       to before executing any Sqitch commands. Thanks to Thomas Sibley for
       the suggestion (#411).
     - Added the `--no-pager` option to disable the pager (#414).
     - Changed command-line parsing to allow core and command options to
       appear anywhere on the line. Previously, core options had to come
       before the command name, and command options after. No more. The caveat
       is that command options that take arguments should either appear after
       the command or use the `--opt=val` syntax instead of `--opt val`, so
       that Sqitch doesn't think `val` is the command. Even in that case, it
       will keep searching the rest of the arguments to find a valid command.
       However, to minimize this challenge, the documentation now suggests
       and demonstrates putting all options after the command, like so:
       `sqitch [command] [options]`.
     - Simplified and clarified the distinction between core and command
       options by removing all options from the core except those that affect
       output and runtime context. The core options are:
       * -C --chdir --cd <dir>  Change to directory before performing any actions
       *    --etc-path          Print the path to the etc directory and exit
       *    --no-pager          Do not pipe output into a pager
       *    --quiet             Quiet mode with non-error output suppressed
       * -V --verbose           Increment verbosity
       *    --version           Print the version number and exit