@@ -87,8 +87,8 @@ changes can be specified.
 
 Set a variable name and value for use by the database engine client, if it
 supports variables. The format must be C<name=value>, e.g.,
-C<--set defuser='Homer Simpson'>. Overrides any values loaded from the
-C<verify.variables> configuration.
+C<--set defuser='Homer Simpson'>. Overrides any values loaded from
+L</configuration Variables>.
 
 =item C<--registry>
 
@@ -168,10 +168,17 @@ configuration values. Defaults to F<$top_dir/sqitch.plan>.
 
 =over
 
+=item C<[deploy.variables]>
+
 =item C<[verify.variables]>
 
-A section defining database client variables. Useful if your database engine
-supports variables in scripts, such as PostgreSQL's
+A section defining database client variables. The C<deploy.variables>
+configuration is read from the C<deploy> command configuration, on the
+assumption that the values will generally be the same on verify. If they're
+not, use C<verify.variables> to override C<deploy.variables>.
+
+These variables are useful if your database engine supports variables in
+scripts, such as PostgreSQL's
 L<C<psql> variables|https://www.postgresql.org/docs/current/static/app-psql.html#APP-PSQL-INTERPOLATION>,
 Vertica's
 L<C<vsql> variables|https://my.vertica.com/docs/7.1.x/HTML/index.htm#Authoring/ConnectingToHPVertica/vsql/Variables.htm>,
@@ -181,6 +188,25 @@ SQL*Plus's
 L<C<DEFINE> variables|https://docs.oracle.com/cd/B19306_01/server.102/b14357/ch12017.htm>,
 and Snowflake's
 L<SnowSQL variables|https://docs.snowflake.net/manuals/user-guide/snowsql-use.html#using-variables>.
+
+May be overridden by C<--set> or target and engine configuration. Variables
+are merged in the following priority order:
+
+=over
+
+=item C<--set>
+
+=item C<target.$target.variables>
+
+=item C<engine.$engine.variables>
+
+=item C<verify.variables>
+
+=item C<deploy.variables>
+
+=item C<core.variables>
+
+=back
 
 =back
 
